--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       <a href="#contact">Contato</a>
     </nav>
 
-    <button class="gradient-btn">Contate Me</button>
   </header>
 
   <section class="home" id="home">
@@ -104,7 +103,6 @@
     <div class="service-img">
       <img src="images/speakgo.png" alt="Speak&Go - Aulas de Inglês com prática real">
     </div>
-  
     <div class="about-content">
       <h2>Sobre o <span>Speak&Go</span></h2>
       <p>
@@ -122,8 +120,7 @@
     <div class="service-img">
       <img src="images/codestarter.png" alt="Mentoria de Programação">
     </div>
-  
-    <div class="service-content">
+    <div class="about-content">
       <h2><span>Code Starter</span>  - Mentoria</h2>
       <p>Você não precisa ser gênio nem esperar anos de faculdade para entrar no mundo da programação. Com o CodeStarter, você aprende criando sites reais desde a primeira aula. Aqui, o foco é prática + orientação de carreira, com apoio de alguém que já viveu esse caminho. Vamos juntos usar o código como ferramenta pra mudar de vida e conquistar espaço na web.</p>
       <a href="https://w.app/mxsbvi" class="btn">Saiba mais</a>
@@ -135,13 +132,32 @@
       <img src="images/webboss.png" alt="Criação de Sites Profissionais">
     </div>
   
-    <div class="service-content">
+    <div class="about-content">
       <h2><span>Web Boss</span>: Seu Primeiro Site</h2>
       <p>Tem uma ideia ou quer lançar um negócio online? Com o WebBoss, você recebe um site profissional e aprende a construir sua presença digital com confiança e estilo. Não é só design — aqui tem marketing, redes sociais e tudo que você precisa pra atrair seus primeiros clientes com segurança.</p>
       <a href="https://w.app/usuqkl" class="btn">Solicitar orçamento</a>
     </div>
   </section>  
 
+  <section class="contact" id="contact">
+    <h2 class="heading">Contate <span>Me</span></h2>
+    <form action="#">
+      <div class="input-group">
+        <div class="input-box">
+          <input type="text" placeholder="Nome Completo">
+          <input type="email" placeholder="Email">
+        </div>
+        <div class="input-box">
+          <input type="number" placeholder="Número de Telefone">
+          <input type="text" placeholder="Assunto">
+        </div>
+      </div>
+      <div class="input-group2">
+        <textarea name="" id="" placeholder="Sua mensagem" cols="30" rows="10"></textarea>
+        <input type="submit" value="Enviar mensagem" class="btn">
+      </div>
+    </form>
+  </section>
 
   <footer class="footer">
     <div class="social-icons">
@@ -169,6 +185,5 @@
   </footer>
 
   <script src="script.js"></script>
-
 </body>
 </html>
