--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>Portfolio Benito</title>
   <link rel="stylesheet" href="style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="icon" type="image/png" sizes="16x16"  href="/favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16"  href="/favicon/favicon-16x16.png">
+  <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon.ico">
 </head>
 <body>
-
+  
   <header class="header">
     <a href="#home" class="logo">
       Guilherme <span>Benito</span>
@@ -22,7 +24,6 @@
       <a href="#services">Serviços</a>
       <a href="#contact">Contato</a>
     </nav>
-
   </header>
 
   <section class="home" id="home">
