--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="btn-group">
-        <a href="https://w.app/snjlyu" class="btn">Contratar</a>
+        <a href="https://wa.me/+557199164325?text=Olá+Benito,+tudo+bem?+ Tenho+interesse+em+um+dos+seus+serviços!" class="btn">Contratar</a>
         <a href="#contact" class="btn">Contato</a>
       </div>
     </div>
@@ -113,7 +113,7 @@
         As aulas são práticas, focadas em vocabulário útil, situações reais e liberdade para se expressar.
         Feito sob medida para jovens, autônomos e curiosos que buscam fluência sem complicação.
       </p>
-      <a href="https://w.app/t1ziqs" class="btn">Quero Aprender Inglês</a>
+      <a href="https://wa.me/+557199164325?text=Olá+Benito,+tudo+bem?+ Quero+aprender+inglês+e+transformar+a+minha+vida!" class="btn">Quero Aprender Inglês</a>
     </div>
   </section>
 
@@ -124,7 +124,7 @@
     <div class="about-content">
       <h2><span>Code Starter</span>  - Mentoria</h2>
       <p>Você não precisa ser gênio nem esperar anos de faculdade para entrar no mundo da programação. Com o CodeStarter, você aprende criando sites reais desde a primeira aula. Aqui, o foco é prática + orientação de carreira, com apoio de alguém que já viveu esse caminho. Vamos juntos usar o código como ferramenta pra mudar de vida e conquistar espaço na web.</p>
-      <a href="https://w.app/mxsbvi" class="btn">Saiba mais</a>
+      <a href="https://wa.me/+557199164325?text=Olá+Benito,+tudo+bem?+ Quero+aprender+desenvolvimento+web+e+ampliar+a+minha+visão+de+mercado!" class="btn">Saiba mais</a>
     </div>
   </section>
 
@@ -136,7 +136,7 @@
     <div class="about-content">
       <h2><span>Web Boss</span>: Seu Primeiro Site</h2>
       <p>Tem uma ideia ou quer lançar um negócio online? Com o WebBoss, você recebe um site profissional e aprende a construir sua presença digital com confiança e estilo. Não é só design — aqui tem marketing, redes sociais e tudo que você precisa pra atrair seus primeiros clientes com segurança.</p>
-      <a href="https://w.app/usuqkl" class="btn">Solicitar orçamento</a>
+      <a href="https://wa.me/+557199164325?text=Olá+Benito,+tudo+bem?+ Desejo+ter+uma+identidade+digital+na+web!" class="btn">Solicitar orçamento</a>
     </div>
   </section>  
 
