--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Benito</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="icon" type="image/png" sizes="16x16"  href="/assets/favicon/favicon-16x16.png">
-  <link rel="shortcut icon" href="/assets/favicon/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16"  href="/favicon/favicon-16x16.png">
+  <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon.ico">
 </head>
 <body>
   
@@ -52,13 +52,13 @@ Trabalho com tecnologia, marketing e ensino de inglês, sempre focando em ajudar
     </div>
 
     <div class="home-img">
-      <img src="/assets/images/benito1.jpg" alt="Benito">
+      <img src="/images/benito1.jpg" alt="Benito">
     </div>
   </section>
 
   <section class="about" id="about">
     <div class="about-img">
-      <img src="/assets/images/benito2.jpg" alt="Imagem sobre mim">
+      <img src="/images/benito2.jpg" alt="Imagem sobre mim">
     </div>
 
     <div class="about-content">
@@ -112,7 +112,7 @@ Trabalho com tecnologia, marketing e ensino de inglês, sempre focando em ajudar
 
   <section class="about-service" id="speakgo">
     <div class="service-img">
-      <img src="/assets/images/speak&go.jpg" alt="Speak&Go - Aulas de Inglês com prática real">
+      <img src="/images/speak&go.jpg" alt="Speak&Go - Aulas de Inglês com prática real">
     </div>
     <div class="about-content">
       <h2>Speak and Go — <span>Inglês sem enrolação</span></h2>
@@ -125,7 +125,7 @@ Trabalho com tecnologia, marketing e ensino de inglês, sempre focando em ajudar
 
   <section class="about-service" id="webimpact">
     <div class="service-img">
-      <img src="/assets/images/webimpact.jpg" alt="Mentoria de Programação">
+      <img src="/images/webimpact.jpg" alt="Mentoria de Programação">
     </div>
     <div class="about-content">
       <h2><span>WebImpact</span>  - Sites que impressionam e vendem</h2>
@@ -136,7 +136,7 @@ Trabalho com tecnologia, marketing e ensino de inglês, sempre focando em ajudar
 
   <section class="about-service" id="personalpro">
     <div class="service-img">
-      <img src="/assets/images/personalpro.jpg" alt="Criação de Sites Profissionais">
+      <img src="/images/personalpro.jpg" alt="Criação de Sites Profissionais">
     </div>
   
     <div class="about-content">
